tests/misc_tests/type_eq_ui_tests/constructor_type_errors-err.stderr
error[E0599]: no associated item named `NEW` found for struct `TypeEq<(), u8>` in the current scope
 --> tests/misc_tests/type_eq_ui_tests/constructor_type_errors-err.rs:3:35
  |
3 | const _: () = { TypeEq::<(), u8>::NEW; };
  |                                   ^^^ associated item not found in `TypeEq<(), u8>`
  |
  = note: the associated item was found for
          - `TypeEq<L, L>`

error[E0308]: mismatched types
 --> tests/misc_tests/type_eq_ui_tests/constructor_type_errors-err.rs:6:5
  |
5 | const fn new_assoc_const_with_differnt_types() -> TypeEq<i8, u8> {
  |                                                   -------------- expected `TypeEq<i8, u8>` because of return type
6 |     TypeEq::NEW
  |     ^^^^^^^^^^^ expected `TypeEq<i8, u8>`, found `TypeEq<_, _>`
  |
  = note: expected struct `TypeEq<i8, u8>`
             found struct `TypeEq<_, _>`

error[E0308]: mismatched types
  --> tests/misc_tests/type_eq_ui_tests/constructor_type_errors-err.rs:10:5
   |
9  | const fn new_function_with_differnt_types() -> TypeEq<i8, u8> {
   |                                                -------------- expected `TypeEq<i8, u8>` because of return type
10 |     TypeEq::new()
   |     ^^^^^^^^^^^^^ expected `TypeEq<i8, u8>`, found `TypeEq<_, _>`
   |
   = note: expected struct `TypeEq<i8, u8>`
              found struct `TypeEq<_, _>`
